# anomaly-times

./: Dockerfile  Dockerfile.ray  README.md  docker-compose.yml  main.py  nginx.conf  prefect.yaml  pyproject.toml
helm/: prefect-server-values.yaml  prefect-worker-values.yaml
scripts/: create_deployments.py  load_boom.py  register_flows.py
src/anomaly_times/core/: anomaly.py  reader.py  writer.py
src/anomaly_times/flows/: detection.py  forecasting.py  training.py
src/anomaly_times/models/: base.py  utils.py
src/anomaly_times/models/nixtla/: arima.py  lgbm.py  timesnet.py
src/anomaly_times/models/tsfm/: chronos.py
tests/: conftest.py  test_boom_integration.py  test_prefect_e2e.py
