[project]
name = "anomaly-times"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prefect",
    "prefect-ray",
    "pandas",
    "numpy",
    "prometheus-api-client",
    "s3fs",
    "huggingface_hub",
    "pyarrow",
]

[project.optional-dependencies]
ml = [
    "nixtla",
    "statsforecast",
    "neuralforecast",
    "mlforecast",
    "chronos-forecasting"
]
